<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_20"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etNameEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nama_event"
        android:inputType="text" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etLocationEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/lokasi_event"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/tanggal_event"
        android:textColor="@color/grey_3D505C"
        android:textSize="@dimen/text_14"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etStartDateEvent"
            android:focusableInTouchMode="false"
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/tanggal_dari"
            android:inputType="text" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etStartTimeEvent"
            android:focusableInTouchMode="false"
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_weight="1"
            android:hint="@string/pukul"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEndDateEvent"
            android:focusableInTouchMode="false"
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/tanggal_hingga"
            android:inputType="text" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEndTimeEvent"
            android:focusableInTouchMode="false"
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_weight="1"
            android:hint="@string/pukul"
            android:inputType="text" />

    </LinearLayout>

</LinearLayout>