<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_20"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitleDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deskripsi_event"
        android:textColor="@color/grey_3D505C"
        android:textSize="@dimen/text_14"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etDescriptionEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:maxLength="300"
        android:hint="@string/masukan_deskripsi_event_anda"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/tvTitleDescription" />


    <TextView
        android:id="@+id/tvTitleorganizer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_14"
        android:text="@string/penyelenggara_acara"
        android:textColor="@color/grey_3D505C"
        android:textSize="@dimen/text_14"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etDescriptionEvent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etOrganizer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/jhon_doe"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/tvTitleorganizer" />

</androidx.constraintlayout.widget.ConstraintLayout>