<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".view.ui.LoginActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_atau_nomor_ponsel"
            android:inputType="text"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_14"
            android:hint="@string/kata_sandi"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/etUsername" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cbRememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/orange_FF7800"
            android:text="@string/ingat_saya"
            android:textColor="@color/grey_3D505C"
            android:textSize="@dimen/text_14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lupa_kata_sandi"
            android:textColor="@color/orange_FF7800"
            android:textSize="@dimen/text_14"
            app:layout_constraintBottom_toBottomOf="@id/cbRememberMe"
            app:layout_constraintRight_toRightOf="@id/etPassword" />

        <Button
            android:id="@+id/btnLogin"
            style="@style/ButtonGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:lineSpacingExtra="2sp"
            android:text="@string/masuk"
            android:textSize="@dimen/text_14"
            app:layout_constraintTop_toBottomOf="@id/cbRememberMe" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>