<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:fitsSystemWindows="false"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingTop="20dp"
        android:paddingEnd="24dp"
        android:paddingBottom="20dp"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_success_orange" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:lineSpacingExtra="2sp"
            android:text="@string/event_berhasil_disimpan"
            android:textColor="@color/black"
            android:textSize="@dimen/text_18" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:lineSpacingExtra="2sp"
            android:text="@string/kamu_telah_berhasil_membuat_event_baru"
            android:textSize="@dimen/text_14" />

        <Button
            android:id="@+id/btnOk"
            style="@style/ButtonOrange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:lineSpacingExtra="2dp"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="@dimen/text_14" />


    </LinearLayout>


</LinearLayout>