<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_20"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitleDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tambahkan_gambar_event"
        android:textColor="@color/grey_3D505C"
        android:textSize="@dimen/text_14"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/ivEvent"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="14dp"
        android:background="@drawable/ic_no_image"
        android:contentDescription="@string/image"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleDescription" />


    <TextView
        android:id="@+id/tvInformation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:lineSpacingExtra="2sp"
        android:text="@string/text_information_image"
        android:textColor="@color/grey_3D505C"
        android:textSize="@dimen/text_14"
        app:layout_constraintBottom_toBottomOf="@id/ivEvent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivEvent"
        app:layout_constraintTop_toTopOf="@id/ivEvent" />

</androidx.constraintlayout.widget.ConstraintLayout>