<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/lyHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange_FF7800"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="17.5dp"
        android:paddingEnd="20dp"
        android:paddingBottom="17.5dp"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/partial_home" />

    </LinearLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lyHeader">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/viewMain"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_home"
                android:contentDescription="@string/image"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent">


                <androidx.cardview.widget.CardView
                    android:id="@+id/cvMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:overScrollMode="never"
                        android:padding="8dp"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ly_saldo"
                        tools:ignore="MissingConstraints" />

                </androidx.cardview.widget.CardView>


                <!--    Content Event Today    -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/viewEventToday"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="20dp"
                    app:layout_constraintTop_toBottomOf="@id/cvMenu">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cvImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginBottom="8dp"
                        android:orientation="vertical"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="3dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/ivEvent"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:background="@drawable/background_home"
                            android:contentDescription="@string/image"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.cardview.widget.CardView>


                    <TextView
                        android:id="@+id/tvMonthEvent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_8"
                        android:text="@string/jul"
                        android:textColor="@color/red_F90716"
                        android:textSize="@dimen/text_16"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/cvImage" />

                    <TextView
                        android:id="@+id/tvDateEvent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_4"
                        android:text="@string/_13"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_16"
                        app:layout_constraintEnd_toEndOf="@id/tvMonthEvent"
                        app:layout_constraintStart_toStartOf="@id/tvMonthEvent"
                        app:layout_constraintTop_toBottomOf="@id/tvMonthEvent" />

                    <TextView
                        android:id="@+id/tvTitleEvent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_12"
                        android:text="@string/android_training_day"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_16"
                        app:layout_constraintBottom_toBottomOf="@id/tvMonthEvent"
                        app:layout_constraintStart_toEndOf="@id/tvMonthEvent"
                        app:layout_constraintTop_toTopOf="@id/tvMonthEvent" />

                    <TextView
                        android:id="@+id/tvRoomEvent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/conference_room_elevenia_f30"
                        android:textColor="@color/grey_3D505C"
                        android:textSize="@dimen/text_14"
                        app:layout_constraintBottom_toBottomOf="@id/tvDateEvent"
                        app:layout_constraintStart_toStartOf="@id/tvTitleEvent"
                        app:layout_constraintTop_toTopOf="@id/tvDateEvent" />
                </androidx.constraintlayout.widget.ConstraintLayout>


                <!--    Content New Event    -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/viewNewEvent"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/margin_20"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="@dimen/margin_20"
                    android:layout_marginBottom="@dimen/margin_20"
                    app:layout_constraintTop_toBottomOf="@id/viewEventToday">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/event_terbaru"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_16"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvAllEvent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_12"
                        android:text="@string/lihat_semua"
                        android:textColor="@color/orange_FF7800"
                        android:textSize="@dimen/text_16"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvEvent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_8"
                        android:overScrollMode="never"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        app:layout_constraintTop_toBottomOf="@id/tvAllEvent"
                        tools:listitem="@layout/list_item_event" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>